workloads/bazarr/bazarr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: default
  labels:
    app: bazarr
spec:
  selector:
    app: bazarr
  ports:
  - name: http
    port: http
    protocol: TCP
    targetPort: http
