workloads/bazarr/bazarr-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bazarr
  namespace: default
  labels:
    app: bazarr
spec:
  rules:
  - host: bazarr.tun0.eu
    http:
      paths:
        - path: /
          backend:
            serviceName: bazarr
            servicePort: http
